--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ var wc_add_to_cart_params = {"ajax_url":"\/petroleum-gas\/wp-admin\/admin-ajax.p
 								data-frame_999="st:9000;sp:1000;auto:true;"
 								data-frame_999_mask="u:t;"
 								style="z-index:6;font-family:Montserrat;text-align:left;"
-							>We have the largest fleet of Mining Machinery in the country.
+							>We provide transparent reporting throughout the refining process.
 							</rs-layer><!--
 
 							--><rs-layer
@@ -532,7 +532,7 @@ var wc_add_to_cart_params = {"ajax_url":"\/petroleum-gas\/wp-admin\/admin-ajax.p
 								data-frame_999="st:9000;sp:1000;auto:true;"
 								data-frame_999_mask="u:t;"
 								style="z-index:6;font-family:Montserrat;text-align:left;"
-							>Reverse Circulaion Drilling, Vaccum Suction Drilling, Large Diameter Drilling.
+							>As reputable dealers in precious metals and other minerals, we facilitate the buying and selling of raw materials.
 							</rs-layer><!--
 
 							--><rs-layer
@@ -909,7 +909,7 @@ var wc_add_to_cart_params = {"ajax_url":"\/petroleum-gas\/wp-admin\/admin-ajax.p
 					<a href="#"><h4>Contact</h4></a>
 					<p>Email: Info@powerskylimited.com</p>
 					<p>powersky22@gmail.com</p>
-					<p>Tel: +256 755 650019</p>
+					<p>Tel: +256 756 839 187</p>
 				</div>
 
 			</li>
@@ -1002,7 +1002,7 @@ We help clients find the best minerals and mining equipment without compromise
 
 					<ul>
 						<li>
-							<span><span>Phone:</span> +256 755 650019</span>
+							<span><span>Phone:</span> +256 756 839 187</span>
 						</li>
 						<li>
 							<span><span>Email:</span> <a href="mailto:info@powerskylimited.com">info@powerskylimited.com</a></span>
