--- a/index.html
+++ b/index.html
@@ -907,8 +907,7 @@ var wc_add_to_cart_params = {"ajax_url":"\/petroleum-gas\/wp-admin\/admin-ajax.p
 					<li class=" animated " data-animated=fadeInUp>
 				<div id="contact" class="wd-project hvr-underline-from-center">
 					<a href="#"><h4>Contact</h4></a>
-					<p>Email: Info@powerskylimited.com</p>
-					<p>powersky22@gmail.com</p>
+					<p>Email: info@powerskylimited.com</p>
 					<p>Tel: +256 756 839 187</p>
 				</div>
 
